# Algorithms

./: README.md
Graph_algorithms/Algorytmy_Prima_Kruskala_Dijkstry_Bellmana-Forda/Projekt_2/: AiZO_Projekt2.xlsx
Graph_algorithms/Algorytmy_Prima_Kruskala_Dijkstry_Bellmana-Forda/Projekt_2/Koncowe_rzeczy/: Mateusz_Bukowski_AiZO_Projekt_2.docx
Graph_algorithms/Algorytmy_Prima_Kruskala_Dijkstry_Bellmana-Forda/Projekt_2/Przykladowe_grafy/: graf1.txt  graf2.txt
Graph_algorithms/Algorytmy_Prima_Kruskala_Dijkstry_Bellmana-Forda/Projekt_2/Stare_rzeczy/: Opisy_algorytmu.txt
Komivoyager_problem_algorithms/Algorymy_BFS_DFS_BestFirstSearch/Pea_projekt2/: CMakeLists.txt
Komivoyager_problem_algorithms/Algorymy_BFS_DFS_BestFirstSearch/Pea_projekt2/Headers/: best_first_search.h  best_first_search_sym.h  breadth_first_search.h  breadth_first_search_sym.h  depth_first_search.h  depth_first_search_sym.h  generate.h  load.h  main_switch.h  node.h
Komivoyager_problem_algorithms/Algorymy_BFS_DFS_BestFirstSearch/Pea_projekt2/Sources/: best_first_search.cpp  best_first_search_sym.cpp  breadth_first_search_sym.cpp  breath_first_search.cpp  depth_first_search.cpp  depth_first_search_sym.cpp  generate.cpp  load.cpp  main.cpp  main_switch.cpp  node.cpp
Komivoyager_problem_algorithms/Algorytm_Tabu_Search/Pea_projekt3/: CMakeLists.txt
Komivoyager_problem_algorithms/Algorytm_Tabu_Search/Pea_projekt3/Headers/: load.h  main_switch.h  motion_rate_function.h  moves.h  nearest_neighbour.h  tabu_search.h
Komivoyager_problem_algorithms/Algorytm_Tabu_Search/Pea_projekt3/Sources/: load.cpp  main.cpp  main_switch.cpp  motion_rate_function.cpp  moves.cpp  neares_neighbour.cpp  quicksort.cpp  tabu_search.cpp
Komivoyager_problem_algorithms/Algorytm_genetyczny/Pea_projekt4/: CMakeLists.txt
Komivoyager_problem_algorithms/Algorytm_genetyczny/Pea_projekt4/Headers/: genetic_algorithm.h  load.h  main_switch.h  measurements.h  nearest_neighbour.h  quicksort.h
Komivoyager_problem_algorithms/Algorytm_genetyczny/Pea_projekt4/Sources/: genetic_algorithm.cpp  load.cpp  main_switch.cpp  measurements.cpp  neares_neighbour.cpp  quicksort.cpp
Komivoyager_problem_algorithms/Algorytmy_BruteForce_NearestNeighbour_Random/Pea_projekt1/: CMakeLists.txt
Komivoyager_problem_algorithms/Algorytmy_BruteForce_NearestNeighbour_Random/Pea_projekt1/Headers/: algorithm_menu.h  complete_review.h  generate.h  load.h  main_menu.h  nearest_neighbour.h  random_algorithm.h
Komivoyager_problem_algorithms/Algorytmy_BruteForce_NearestNeighbour_Random/Pea_projekt1/Sources/: algorithm_menu.cpp  complete_review.cpp  generate.cpp  load.cpp  main.cpp  main_menu.cpp  nearest_neighbour.cpp  random_algorithm.cpp
Sorting_algorithms/Algorytmy_przezWstawianie_przezKopcowanie_Shella_quicksort/Projekt_1/: Stare_wnioski.docx
Sorting_algorithms/Algorytmy_przezWstawianie_przezKopcowanie_Shella_quicksort/Projekt_1/AiZO_tabele_wyników/: AiZO_wyniki_33%.xlsx  AiZO_wyniki_66%.xlsx  AiZO_wyniki_losowe.xlsx  AiZO_wyniki_malejące.xlsx  AiZO_wyniki_rosnące.xlsx  wyniki_końcowe_AiZO.xlsx
Sorting_algorithms/Algorytmy_przezWstawianie_przezKopcowanie_Shella_quicksort/Projekt_1/Koncowe_rzeczy/: Mateusz_Bukowski_AiZO_Projekt_1.docx
Sorting_algorithms/Algorytmy_przezWstawianie_przezKopcowanie_Shella_quicksort/Projekt_1/Projekt1/: Makefile.win  Projekt_1_sortowania.dev  Projekt_1_sortowania.layout  Tablica.txt  algorithms_menu.cpp  algorithms_menu.h  main.cpp  menu.cpp  menu.h  sort_wstawianie.cpp  sort_wstawianie.h
(+52 files in other folders)
